--- a/ch3/react-good_way.html
+++ b/ch3/react-good_way.html
@@ -9,21 +9,20 @@
 
 <script type="text/babel"> // type를 text/babel로 바꾸어 주어야 한다
     const root = document.getElementById("root");
-    const Title = ()=>(
-        <h3 id="title" onMouseEnter={() => console.log("mouse enteres")}>
-        Hello I'm a title
-        </h3>);
-    const Btn = ()=>( 
-        <button style={{backgroundColor:"tomato"}} onClick={()=>console.log("im clicked")}> 
-        click me
-        </button>);
-    
-    const Container = () => (
-        <div>  
-            <Title/> 
-            <Btn/>
-        </div>
-    );
-    ReactDOM.render(<Container/>, root);
+    function App(){
+        let [counter, setCounter] = React.useState(0);
+        const onClick = ()=> {
+            // counter = counter+1;
+            // ReactDOM.render(<App/>, root);
+            setCounter(counter+1);
+        }
+        return (
+            <div>  
+                <h3>Total clicks: {counter}</h3>
+                <button onClick={onClick}> Click me</button>
+            </div>
+        );
+    }
+    ReactDOM.render(<App/>, root);
 </script>
 </html> 
