--- a/ch2.basic of react/react-babel way.html
+++ b/ch2.basic of react/react-babel way.html
@@ -5,7 +5,7 @@
 </body>
 <script src="http://unpkg.com/react@latest/umd/react.production.min.js" crossorigin></script>
 <script src="http://unpkg.com/react-dom@latest/umd/react-dom.production.min.js" crossorigin></script>
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js">// babel 문법</script> 
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> 
 
 <script type="text/babel"> // type를 text/babel로 바꾸어 주어야 한다
     const root = document.getElementById("root");
