--- a/ch2.basic of react/react-jsx.html
+++ b/ch2.basic of react/react-jsx.html
@@ -12,11 +12,16 @@
     const Title = ()=>(
         <h3 id="title" onMouseEnter={() => console.log("mouse enteres")}>
         Hello I'm a title
-        </h3>);
+        </h3>
+    );
     const Btn = ()=>( 
-        <button style={{backgroundColor:"tomato"}} onClick={()=>console.log("im clicked")}> 
+        <button style={{
+            backgroundColor:"tomato"
+        }} 
+        onClick={()=>console.log("im clicked")}> 
         click me
-        </button>);
+        </button>
+    );
     
     const Container = () => (
         <div>  
